// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button big component should render with custom summaryText color 1`] = `
.c0 {
  color: #212240;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 20px;
  font-weight: bold;
  line-height: 25px;
}

<span
  className="c0"
  color="summaryText"
>
  Lorem ipsum
</span>
`;

exports[`button big component should render with default css properties 1`] = `
.c0 {
  color: #7350FF;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 20px;
  font-weight: bold;
  line-height: 25px;
}

<span
  className="c0"
>
  Lorem ipsum
</span>
`;
